# digital-twin-reconstruction

./: .gitignore  README.md
featurization/: .gitignore  Cargo.toml
featurization/demo/: keypoints-sunflower.npz  keypoints-unfiltered.npz  keypoints.npz  orientation.npz  sunflower-orientation.npz
featurization/notebook/: sift__visualization.ipynb
featurization/src/: main.rs  octave.rs  proc.rs
featurization/src/sift/: descriptor.rs  difference.rs  extrema.rs  keypoint.rs  mod.rs  refiner.rs  scale.rs  util.rs
geospatial_indexing/: Cargo.toml
geospatial_indexing/demo/: hge.txt  trajectories.txt
geospatial_indexing/notebooks/: floor_inference-hge.ipynb  floor_inference.ipynb
geospatial_indexing/visualizer/: Cargo.toml
geospatial_indexing/visualizer/src/: main.rs  plane.rs  shader.rs  trajectory.rs
