[package]
name = "featurization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
num = "0.4.0"

[dependencies]
image = "0.24.0"
imageproc = "0.23.0"
nalgebra = { version = "0.32" }
ndarray = { version = "0.15.6" }
rayon = { version = "1.6.1", optional = true }

[features]
parallel = ["dep:rayon", "ndarray/rayon"]
